ide: python formatter settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
-  "editor.tabSize": 4,
-  "editor.detectIndentation": false
+    "editor.tabSize": 4,
+    "editor.detectIndentation": false,
+    "python.formatting.provider": "autopep8",
+    "python.formatting.autopep8Args": [
+        "--max-line-length=200"
+    ],
+    "editor.rulers": [ 120 ]
 }
