--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-TELEGRAM_API_KEY=
-TELEGRAM_CHAT_ID=
+TELEGRAM_API_KEY=# telegram bot api key
+TELEGRAM_CHAT_ID=# telegram chat id
+WORKSPACE_OWNER=# workspace owner name
