doc: add s4cmd example env vars

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 TELEGRAM_API_KEY=# telegram bot api key
 TELEGRAM_CHAT_ID=# telegram chat id
 WORKSPACE_OWNER=# workspace owner telegram username
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+S3_ENDPOINT_URL=
